--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "create": "node index.js create",
+    "destroy": "node index.js destroy",
+    "show": "node index.js show",
+    "update": "node index.js edit"
   },
   "keywords": [],
   "author": "Marcus Browne",
